// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Popover with background component bottom, should render properly 1`] = `
.c2 {
  background-color: white;
  border-radius: 0.8rem;
  position: relative;
  padding: 1.5rem 2rem;
}

.c2::after {
  width: 0;
  height: 0;
  z-index: 10;
  position: absolute;
  border-left: 0.8rem solid transparent;
  border-right: 0.8rem solid transparent;
  border-top: 1rem solid #fff;
  content: '';
}

.c0 {
  position: absolute;
  z-index: 1000;
  -webkit-transition: all 2ms ease-in-out;
  transition: all 2ms ease-in-out;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  width: calc(100% - 0px);
  height: calc(100% - 0px);
  top: calc(100% + 1.5rem);
}

.c0 .c1 {
  box-shadow: 0 -0.4rem 1.6rem rgba(176,188,200,0.5);
}

.c0 .c1::after {
  -webkit-transform: translateX(-50%) rotate(180deg);
  -ms-transform: translateX(-50%) rotate(180deg);
  transform: translateX(-50%) rotate(180deg);
  left: 50%;
  bottom: 100%;
}

<div>
  <div
    class="c0"
    id="medly-popover"
  >
    <div
      class="c1 c2"
    >
      Dummy popover
    </div>
  </div>
</div>
`;

exports[`Popover with background component bottom-end, should render properly 1`] = `
.c2 {
  background-color: white;
  border-radius: 0.8rem;
  position: relative;
  padding: 1.5rem 2rem;
}

.c2::after {
  width: 0;
  height: 0;
  z-index: 10;
  position: absolute;
  border-left: 0.8rem solid transparent;
  border-right: 0.8rem solid transparent;
  border-top: 1rem solid #fff;
  content: '';
}

.c0 {
  position: absolute;
  z-index: 1000;
  -webkit-transition: all 2ms ease-in-out;
  transition: all 2ms ease-in-out;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  width: calc(100% - 0px);
  height: calc(100% - 0px);
  top: calc(100% + 1.5rem);
}

.c0 .c1 {
  box-shadow: 0 -0.4rem 1.6rem rgba(176,188,200,0.5);
}

.c0 .c1::after {
  -webkit-transform: translateX(-50%) rotate(180deg);
  -ms-transform: translateX(-50%) rotate(180deg);
  transform: translateX(-50%) rotate(180deg);
  left: 50%;
  bottom: 100%;
}

<div>
  <div
    class="c0"
    id="medly-popover"
  >
    <div
      class="c1 c2"
    >
      Dummy popover
    </div>
  </div>
</div>
`;

exports[`Popover with background component bottom-start, should render properly 1`] = `
.c2 {
  background-color: white;
  border-radius: 0.8rem;
  position: relative;
  padding: 1.5rem 2rem;
}

.c2::after {
  width: 0;
  height: 0;
  z-index: 10;
  position: absolute;
  border-left: 0.8rem solid transparent;
  border-right: 0.8rem solid transparent;
  border-top: 1rem solid #fff;
  content: '';
}

.c0 {
  position: absolute;
  z-index: 1000;
  -webkit-transition: all 2ms ease-in-out;
  transition: all 2ms ease-in-out;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  width: calc(100% - 0px);
  height: calc(100% - 0px);
  top: calc(100% + 1.5rem);
}

.c0 .c1 {
  box-shadow: 0 -0.4rem 1.6rem rgba(176,188,200,0.5);
}

.c0 .c1::after {
  -webkit-transform: translateX(-50%) rotate(180deg);
  -ms-transform: translateX(-50%) rotate(180deg);
  transform: translateX(-50%) rotate(180deg);
  left: 50%;
  bottom: 100%;
}

<div>
  <div
    class="c0"
    id="medly-popover"
  >
    <div
      class="c1 c2"
    >
      Dummy popover
    </div>
  </div>
</div>
`;

exports[`Popover with background component left, should render properly 1`] = `
.c2 {
  background-color: white;
  border-radius: 0.8rem;
  position: relative;
  padding: 1.5rem 2rem;
}

.c2::after {
  width: 0;
  height: 0;
  z-index: 10;
  position: absolute;
  border-left: 0.8rem solid transparent;
  border-right: 0.8rem solid transparent;
  border-top: 1rem solid #fff;
  content: '';
}

.c0 {
  position: absolute;
  z-index: 1000;
  -webkit-transition: all 2ms ease-in-out;
  transition: all 2ms ease-in-out;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  width: calc(100% - 0px);
  height: calc(100% - 0px);
  right: calc(100% + 1.5rem);
}

.c0 .c1 {
  box-shadow: 0.4rem 0 1.6rem rgba(176,188,200,0.5);
}

.c0 .c1::after {
  -webkit-transform: translateY(-50%) rotate(270deg);
  -ms-transform: translateY(-50%) rotate(270deg);
  transform: translateY(-50%) rotate(270deg);
  top: 50%;
  left: calc(100% - 0.3rem);
}

<div>
  <div
    class="c0"
    id="medly-popover"
  >
    <div
      class="c1 c2"
    >
      Dummy popover
    </div>
  </div>
</div>
`;

exports[`Popover with background component left-end, should render properly 1`] = `
.c2 {
  background-color: white;
  border-radius: 0.8rem;
  position: relative;
  padding: 1.5rem 2rem;
}

.c2::after {
  width: 0;
  height: 0;
  z-index: 10;
  position: absolute;
  border-left: 0.8rem solid transparent;
  border-right: 0.8rem solid transparent;
  border-top: 1rem solid #fff;
  content: '';
}

.c0 {
  position: absolute;
  z-index: 1000;
  -webkit-transition: all 2ms ease-in-out;
  transition: all 2ms ease-in-out;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  width: calc(100% - 0px);
  height: calc(100% - 0px);
  right: calc(100% + 1.5rem);
}

.c0 .c1 {
  box-shadow: 0.4rem 0 1.6rem rgba(176,188,200,0.5);
}

.c0 .c1::after {
  -webkit-transform: translateY(-50%) rotate(270deg);
  -ms-transform: translateY(-50%) rotate(270deg);
  transform: translateY(-50%) rotate(270deg);
  top: 50%;
  left: calc(100% - 0.3rem);
}

<div>
  <div
    class="c0"
    id="medly-popover"
  >
    <div
      class="c1 c2"
    >
      Dummy popover
    </div>
  </div>
</div>
`;

exports[`Popover with background component left-start, should render properly 1`] = `
.c2 {
  background-color: white;
  border-radius: 0.8rem;
  position: relative;
  padding: 1.5rem 2rem;
}

.c2::after {
  width: 0;
  height: 0;
  z-index: 10;
  position: absolute;
  border-left: 0.8rem solid transparent;
  border-right: 0.8rem solid transparent;
  border-top: 1rem solid #fff;
  content: '';
}

.c0 {
  position: absolute;
  z-index: 1000;
  -webkit-transition: all 2ms ease-in-out;
  transition: all 2ms ease-in-out;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  width: calc(100% - 0px);
  height: calc(100% - 0px);
  right: calc(100% + 1.5rem);
}

.c0 .c1 {
  box-shadow: 0.4rem 0 1.6rem rgba(176,188,200,0.5);
}

.c0 .c1::after {
  -webkit-transform: translateY(-50%) rotate(270deg);
  -ms-transform: translateY(-50%) rotate(270deg);
  transform: translateY(-50%) rotate(270deg);
  top: 50%;
  left: calc(100% - 0.3rem);
}

<div>
  <div
    class="c0"
    id="medly-popover"
  >
    <div
      class="c1 c2"
    >
      Dummy popover
    </div>
  </div>
</div>
`;

exports[`Popover with background component right, should render properly 1`] = `
.c2 {
  background-color: white;
  border-radius: 0.8rem;
  position: relative;
  padding: 1.5rem 2rem;
}

.c2::after {
  width: 0;
  height: 0;
  z-index: 10;
  position: absolute;
  border-left: 0.8rem solid transparent;
  border-right: 0.8rem solid transparent;
  border-top: 1rem solid #fff;
  content: '';
}

.c0 {
  position: absolute;
  z-index: 1000;
  -webkit-transition: all 2ms ease-in-out;
  transition: all 2ms ease-in-out;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  width: calc(100% - 0px);
  height: calc(100% - 0px);
  left: calc(100% + 1.5rem);
}

.c0 .c1 {
  box-shadow: -0.4rem 0 1.6rem rgba(176,188,200,0.5);
}

.c0 .c1::after {
  -webkit-transform: translateY(-50%) rotate(90deg);
  -ms-transform: translateY(-50%) rotate(90deg);
  transform: translateY(-50%) rotate(90deg);
  top: 50%;
  right: calc(100% - 0.3rem);
}

<div>
  <div
    class="c0"
    id="medly-popover"
  >
    <div
      class="c1 c2"
    >
      Dummy popover
    </div>
  </div>
</div>
`;

exports[`Popover with background component right-end, should render properly 1`] = `
.c2 {
  background-color: white;
  border-radius: 0.8rem;
  position: relative;
  padding: 1.5rem 2rem;
}

.c2::after {
  width: 0;
  height: 0;
  z-index: 10;
  position: absolute;
  border-left: 0.8rem solid transparent;
  border-right: 0.8rem solid transparent;
  border-top: 1rem solid #fff;
  content: '';
}

.c0 {
  position: absolute;
  z-index: 1000;
  -webkit-transition: all 2ms ease-in-out;
  transition: all 2ms ease-in-out;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  width: calc(100% - 0px);
  height: calc(100% - 0px);
  left: calc(100% + 1.5rem);
}

.c0 .c1 {
  box-shadow: -0.4rem 0 1.6rem rgba(176,188,200,0.5);
}

.c0 .c1::after {
  -webkit-transform: translateY(-50%) rotate(90deg);
  -ms-transform: translateY(-50%) rotate(90deg);
  transform: translateY(-50%) rotate(90deg);
  top: 50%;
  right: calc(100% - 0.3rem);
}

<div>
  <div
    class="c0"
    id="medly-popover"
  >
    <div
      class="c1 c2"
    >
      Dummy popover
    </div>
  </div>
</div>
`;

exports[`Popover with background component right-start, should render properly 1`] = `
.c2 {
  background-color: white;
  border-radius: 0.8rem;
  position: relative;
  padding: 1.5rem 2rem;
}

.c2::after {
  width: 0;
  height: 0;
  z-index: 10;
  position: absolute;
  border-left: 0.8rem solid transparent;
  border-right: 0.8rem solid transparent;
  border-top: 1rem solid #fff;
  content: '';
}

.c0 {
  position: absolute;
  z-index: 1000;
  -webkit-transition: all 2ms ease-in-out;
  transition: all 2ms ease-in-out;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  width: calc(100% - 0px);
  height: calc(100% - 0px);
  left: calc(100% + 1.5rem);
}

.c0 .c1 {
  box-shadow: -0.4rem 0 1.6rem rgba(176,188,200,0.5);
}

.c0 .c1::after {
  -webkit-transform: translateY(-50%) rotate(90deg);
  -ms-transform: translateY(-50%) rotate(90deg);
  transform: translateY(-50%) rotate(90deg);
  top: 50%;
  right: calc(100% - 0.3rem);
}

<div>
  <div
    class="c0"
    id="medly-popover"
  >
    <div
      class="c1 c2"
    >
      Dummy popover
    </div>
  </div>
</div>
`;

exports[`Popover with background component top, should render properly 1`] = `
.c2 {
  background-color: white;
  border-radius: 0.8rem;
  position: relative;
  padding: 1.5rem 2rem;
}

.c2::after {
  width: 0;
  height: 0;
  z-index: 10;
  position: absolute;
  border-left: 0.8rem solid transparent;
  border-right: 0.8rem solid transparent;
  border-top: 1rem solid #fff;
  content: '';
}

.c0 {
  position: absolute;
  z-index: 1000;
  -webkit-transition: all 2ms ease-in-out;
  transition: all 2ms ease-in-out;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  width: calc(100% - 0px);
  height: calc(100% - 0px);
  bottom: calc(100% + 1.5rem);
}

.c0 .c1 {
  box-shadow: 0 0.4rem 1.6rem rgba(176,188,200,0.5);
}

.c0 .c1::after {
  -webkit-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  transform: translateX(-50%);
  top: 100%;
  left: 50%;
}

<div>
  <div
    class="c0"
    id="medly-popover"
  >
    <div
      class="c1 c2"
    >
      Dummy popover
    </div>
  </div>
</div>
`;

exports[`Popover with background component top-end, should render properly 1`] = `
.c2 {
  background-color: white;
  border-radius: 0.8rem;
  position: relative;
  padding: 1.5rem 2rem;
}

.c2::after {
  width: 0;
  height: 0;
  z-index: 10;
  position: absolute;
  border-left: 0.8rem solid transparent;
  border-right: 0.8rem solid transparent;
  border-top: 1rem solid #fff;
  content: '';
}

.c0 {
  position: absolute;
  z-index: 1000;
  -webkit-transition: all 2ms ease-in-out;
  transition: all 2ms ease-in-out;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  width: calc(100% - 0px);
  height: calc(100% - 0px);
  bottom: calc(100% + 1.5rem);
}

.c0 .c1 {
  box-shadow: 0 0.4rem 1.6rem rgba(176,188,200,0.5);
}

.c0 .c1::after {
  -webkit-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  transform: translateX(-50%);
  top: 100%;
  left: 50%;
}

<div>
  <div
    class="c0"
    id="medly-popover"
  >
    <div
      class="c1 c2"
    >
      Dummy popover
    </div>
  </div>
</div>
`;

exports[`Popover with background component top-start, should render properly 1`] = `
.c2 {
  background-color: white;
  border-radius: 0.8rem;
  position: relative;
  padding: 1.5rem 2rem;
}

.c2::after {
  width: 0;
  height: 0;
  z-index: 10;
  position: absolute;
  border-left: 0.8rem solid transparent;
  border-right: 0.8rem solid transparent;
  border-top: 1rem solid #fff;
  content: '';
}

.c0 {
  position: absolute;
  z-index: 1000;
  -webkit-transition: all 2ms ease-in-out;
  transition: all 2ms ease-in-out;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  width: calc(100% - 0px);
  height: calc(100% - 0px);
  bottom: calc(100% + 1.5rem);
}

.c0 .c1 {
  box-shadow: 0 0.4rem 1.6rem rgba(176,188,200,0.5);
}

.c0 .c1::after {
  -webkit-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  transform: translateX(-50%);
  top: 100%;
  left: 50%;
}

<div>
  <div
    class="c0"
    id="medly-popover"
  >
    <div
      class="c1 c2"
    >
      Dummy popover
    </div>
  </div>
</div>
`;
